--- a/lab7/pyproject.toml
+++ b/lab7/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.5",
+    "pooch>=1.8.2",
+    "pyqt6>=6.10.0",
+    "scikit-image>=0.25.2",
+    "scipy>=1.16.3",
+]
